--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ciana Photography | Where Every Moment Becomes Timeless</title>
+  <title>Karimo Wedding | The studio NG template</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
@@ -1537,7 +1537,7 @@
       </nav>
 
       <!-- Book Now Button -->
-      <a href="#book" class="btn-book">Book Now</a>
+      <a href="#book" class="btn-book">Buy Template</a>
 
       <!-- Mobile Toggle -->
       <div class="menu-toggle" onclick="toggleMenu()">
@@ -1556,7 +1556,7 @@
     <a href="#gallery" onclick="toggleMenu()">Gallery</a>
     <a href="#blog" onclick="toggleMenu()">Blog</a>
     <a href="#contact" onclick="toggleMenu()">Contact</a>
-    <a href="#book" class="btn-book" onclick="toggleMenu()">Book Now</a>
+    <a href="#book" class="btn-book" onclick="toggleMenu()">Buy Template</a>
   </div>
 
   <!-- HERO TITLE -->
@@ -1564,10 +1564,10 @@
     <div class="hero-title-content">
       <span class="hero-title-est">EST.</span>
       <div class="hero-title-center">
-        <h1 class="hero-title-name">Ciana<br>Patterson</h1>
+        <h1 class="hero-title-name">Olumide<br>& Aisha</h1>
         <span class="hero-title-script">Photography</span>
       </div>
-      <span class="hero-title-year">2035</span>
+      <span class="hero-title-year">2026</span>
     </div>
   </section>
 
