--- a/index.html
+++ b/index.html
@@ -1564,8 +1564,8 @@
     <div class="hero-title-content">
       <span class="hero-title-est">EST.</span>
       <div class="hero-title-center">
-        <h1 class="hero-title-name">Olumide<br>& Aisha</h1>
-        <span class="hero-title-script">Photography</span>
+        <h1 class="hero-title-name">Karimo<br>Wedding</h1>
+        <span class="hero-title-script">Template</span>
       </div>
       <span class="hero-title-year">2026</span>
     </div>
@@ -1620,7 +1620,7 @@
       <div class="welcome-col">
         <span class="welcome-num">01</span>
         <span class="welcome-script">Welcome to Ciana Photography</span>
-        <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/1.png" alt="Wedding photo" class="welcome-img">
+        <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/6.png" alt="Wedding photo" class="welcome-img">
       </div>
       <div class="welcome-col">
         <span class="welcome-num">02</span>
