--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
 
   <!-- TAGLINE -->
   <section class="tagline-section">
-    <h1>Where Every Click Of The Shutter Tells A Story</h1>
+    <h1>Karimo & Olumide Are getting married!</h1>
   </section>
 
   <!-- WELCOME SECTION -->
@@ -1619,15 +1619,17 @@
     <div class="welcome-grid">
       <div class="welcome-col">
         <span class="welcome-num">01</span>
-        <span class="welcome-script">Welcome to Ciana Photography</span>
+        <span class="welcome-script">The Karimo Wedding 2026</span>
         <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/6.png" alt="Wedding photo" class="welcome-img">
       </div>
       <div class="welcome-col">
         <span class="welcome-num">02</span>
         <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/7.png" alt="Bride portrait" class="welcome-img">
         <div class="welcome-text">
-          <p>Where every click of the shutter tells a story, and every photograph captures the essence of life's most beautiful moments. We believe in creating timeless images that you and your loved ones will cherish for generations to come.</p>
-          <a href="#about" class="link-underline">Learn More</a>
+          <p>We’re so happy you’re here! This website has everything you need for our wedding weekend — the schedule, dress code, venue details, and a few FAQs so you can plan smoothly. Thank you for loving us, praying for us, and showing up for us. We can’t wait to celebrate with you..</p>
+          <p>Love, Karimo & Olumide</p>
+
+          <a href="#about" class="link-underline">RSVP</a>
         </div>
       </div>
     </div>
@@ -1639,7 +1641,7 @@
       <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/3.png" alt="Champagne">
     </div>
     <div class="scattered-img img-2">
-      <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/4.png" alt="Veil portrait">
+      <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/10.png" alt="Veil portrait">
     </div>
     <div class="scattered-img img-3">
       <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/1.png" alt="Motion shot">
