--- a/index.html
+++ b/index.html
@@ -1653,8 +1653,8 @@
 
   <!-- CTA BANNER -->
   <section class="cta-banner">
-    <h2>Let's Turn Your Memories Into Timeless Works of Art.</h2>
-    <a href="#book" class="cta-link">Schedule Your Session Today</a>
+    <h2>Your presence is the biggest gift. Truly.</h2>
+    <a href="#book" class="cta-link">View our gift registry</a>
   </section>
 
   <!-- MEET CIANA -->
@@ -1666,9 +1666,9 @@
           <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/10.png" alt="Nature scene">
         </div>
         <div class="meet-content">
-          <h2>Meet<br>Ciana</h2>
-          <p>Hi, I'm Ciana, the creative mind and heart behind Ciana Photography. With over a decade of experience in the art of photography, I specialize in capturing the unique beauty and emotion in every moment. My passion for photography goes beyond just taking pictures; it's about creating visual narratives that reflect your true essence and the magic of your most cherished memories. Let's work together to turn your special moments into timeless works of art.</p>
-          <a href="#" class="link-underline">Get to know me</a>
+          <h2>How we<br>Met</h2>
+          <p>We met the most Nigerian way possible: through someone who said “I know somebody for you.” It was meant to be a casual hangout… but it turned into a long conversation, then a second date, then “so what are we?” and somehow, here we are.</p>
+          <a href="#" class="link-underline">RSVP</a>
         </div>
       </div>
       <div class="meet-right-img">
@@ -1681,12 +1681,12 @@
   <!-- MARQUEE -->
   <div class="marquee">
     <div class="marquee-track">
-      <span class="marquee-text">The Experience <span>\</span></span>
-      <span class="marquee-text">The Experience <span>\</span></span>
-      <span class="marquee-text">The Experience <span>\</span></span>
-      <span class="marquee-text">The Experience <span>\</span></span>
-      <span class="marquee-text">The Experience <span>\</span></span>
-      <span class="marquee-text">The Experience <span>\</span></span>
+      <span class="marquee-text">Karimo Wedding <span>\</span></span>
+      <span class="marquee-text">Karimo Wedding <span>\</span></span>
+      <span class="marquee-text">Karimo Wedding <span>\</span></span>
+      <span class="marquee-text">Karimo Wedding <span>\</span></span>
+      <span class="marquee-text">Karimo Wedding <span>\</span></span>
+      <span class="marquee-text">Karimo Wedding <span>\</span></span>
     </div>
   </div>
 
@@ -1694,13 +1694,13 @@
   <section class="services" id="services">
     <div class="services-list">
       <div class="service-item" data-img="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/1.png">
-        <h3><span class="num">01.</span>Wedding</h3>
+        <h3><span class="num">01.</span>Joining</h3>
       </div>
       <div class="service-item" data-img="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/2.png">
-        <h3><span class="num">02.</span>Portrait</h3>
+        <h3><span class="num">02.</span>Traditional</h3>
       </div>
       <div class="service-item" data-img="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/4.png">
-        <h3><span class="num">03.</span>Lifestyle</h3>
+        <h3><span class="num">03.</span>Reception</h3>
       </div>
     </div>
     <div class="services-image">
