--- a/index.html
+++ b/index.html
@@ -1651,12 +1651,6 @@
     </div>
   </section>
 
-  <!-- CTA BANNER -->
-  <section class="cta-banner">
-    <h2>Your presence is the biggest gift. Truly.</h2>
-    <a href="#book" class="cta-link">View our gift registry</a>
-  </section>
-
   <!-- MEET CIANA -->
   <section class="meet-section" id="about">
     <div class="meet-grid">
@@ -1708,6 +1702,12 @@
     </div>
   </section>
 
+   <!-- CTA BANNER -->
+  <section class="cta-banner">
+    <h2>Your presence is the biggest gift. Truly.</h2>
+    <a href="#book" class="cta-link">View our gift registry</a>
+  </section>
+
   <!-- TESTIMONIALS -->
   <section class="testimonials">
     <div class="testimonial-slider">
@@ -1745,7 +1745,8 @@
           <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/2.png" alt="Blog 1">
         </div>
         <span class="blog-num">01.</span>
-        <h4>How to Choose the Perfect Location for Your Photo Shoot</h4>
+        <h4>Traditional Dress Code</h4>
+        <p> Asoebi, if you’re not wearing Aso Ebi:Traditional glam — think lace/aso-oke, ipele, fila, agbada, or elegant native.</p>
         <a href="#" class="link-underline">Read Here</a>
       </div>
       <div class="blog-card">
