--- a/index.html
+++ b/index.html
@@ -1744,26 +1744,25 @@
         <div class="blog-card-img">
           <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/2.png" alt="Blog 1">
         </div>
-        <span class="blog-num">01.</span>
-        <h4>Traditional Dress Code</h4>
-        <p> Asoebi, if you’re not wearing Aso Ebi:Traditional glam — think lace/aso-oke, ipele, fila, agbada, or elegant native.</p>
-        <a href="#" class="link-underline">Read Here</a>
+        <span class="blog-num">Trad Wedding </span>
+        <h4>Asoebi or Traditional Glam</h4>
+        <a href="#" class="link-underline">See Dress Code</a>
       </div>
       <div class="blog-card">
         <div class="blog-card-img">
           <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/1.png" alt="Blog 2">
         </div>
-        <span class="blog-num">02.</span>
-        <h4>5 Tips for Looking Your Best in Photos</h4>
-        <a href="#" class="link-underline">Read Here</a>
+        <span class="blog-num">White Wedding </span>
+        <h4>Classic Black Tie (with Nigerian spice)</h4>
+        <a href="#" class="link-underline">See Dress Code</a>
       </div>
       <div class="blog-card">
         <div class="blog-card-img">
           <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/4.png" alt="Blog 3">
         </div>
-        <span class="blog-num">03.</span>
-        <h4>The Art of Candid Photography: Capturing Real Moments</h4>
-        <a href="#" class="link-underline">Read Here</a>
+        <span class="blog-num">Wedding Colors</span>
+        <h4>Emerald • Gold • Nude</h4>
+        <a href="#" class="link-underline">See Colors</a>
       </div>
     </div>
   </section>
@@ -1771,14 +1770,14 @@
   <!-- FREEBIE MARQUEE -->
   <div class="marquee marquee-dark">
     <div class="marquee-track">
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
-      <span class="marquee-text">Freebie Alert <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
+      <span class="marquee-text">Karimo & Olumide <span>\</span></span>
     </div>
   </div>
 
