--- a/index.html
+++ b/index.html
@@ -1737,7 +1737,7 @@
   <!-- BLOG SECTION -->
   <section class="blog" id="blog">
     <div class="blog-header">
-      <h2>Latest on<br>the Blog</h2>
+      <h2>Our Little<br>Wedding Details</h2>
     </div>
     <div class="blog-grid">
       <div class="blog-card">
@@ -1785,7 +1785,7 @@
   <section class="freebie" id="contact">
     <div class="freebie-image">
       <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/3.png" alt="Free guide">
-      <h3>Exclusive Photography Tips and a Free Guide</h3>
+      <h3>Kindly RSVP by: 15 April 2026</h3>
     </div>
     <div class="freebie-content">
       <div class="freebie-small-wrapper">
@@ -1793,7 +1793,7 @@
         <span class="freebie-num">01</span>
       </div>
       <div class="freebie-form-wrapper">
-        <p>Join our community and receive our free guide, "10 Tips for Taking Perfect Photos Every Time," straight to your inbox. Plus, get exclusive access to photography tips, special offers, and more!</p>
+        <p>We’re keeping things very intentional, so please RSVP only for the names listed on your invite</p>
         <form class="freebie-form">
           <label>Name <span>(required)</span></label>
           <input type="text" name="name" required>
@@ -1810,8 +1810,7 @@
     <div class="footer-main">
       <div class="footer-brand">
         <div class="footer-logo-icon">CP</div>
-        <h4>Ciana Photography</h4>
-        <p>Where Every Moment Becomes a Timeless Memory</p>
+        <h4>Karimo Wedding</h4>
         <div class="footer-social">
           <a href="#">
             <svg viewBox="0 0 24 24"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
@@ -1835,8 +1834,8 @@
       </div>
       <div>
         <div class="footer-col" style="margin-bottom: 30px;">
-          <h5>Contact</h5>
-          <p>10 Begley Street<br>HUTT STREET<br>SA 5000<br>(08) 8280 4768<br>yourwebsite.com</p>
+          <h5>RSVP Directly</h5>
+          <p>Sandra<br>0701234567<br>hello@sandra.com</p>
         </div>
         <div class="footer-gallery">
           <img src="https://raw.githubusercontent.com/wackyworldofshaiz/Karimoweddingtemplate/main/images/1.png" alt="Gallery 1">
@@ -1851,15 +1850,15 @@
 
     <div class="footer-marquee">
       <div class="footer-marquee-track">
-        <span class="footer-marquee-text">Ciana Photography</span>
-        <span class="footer-marquee-text">Ciana Photography</span>
-        <span class="footer-marquee-text">Ciana Photography</span>
-        <span class="footer-marquee-text">Ciana Photography</span>
+        <span class="footer-marquee-text">Karimo & Olumide</span>
+        <span class="footer-marquee-text">Karimo & Olumide</span>
+        <span class="footer-marquee-text">Karimo & Olumide</span>
+        <span class="footer-marquee-text">Karimo & Olumide</span>
       </div>
     </div>
 
     <div class="footer-credit">
-      Template Designed by <a href="#">Row Creative</a>
+      Template Designed by <a href="www.lovebythestudio.netlify.app">Lovebythestudio</a>
     </div>
   </footer>
 
