--- a/index.html
+++ b/index.html
@@ -1518,8 +1518,8 @@
 
       <!-- Nav Left -->
       <nav class="nav-left">
-        <a href="#about">About</a>
-        <a href="#services">Work with Me</a>
+        <a href="#about">Love Story</a>
+        <a href="#services">Schedule</a>
         <a href="#gallery">Gallery</a>
       </nav>
 
@@ -1530,10 +1530,9 @@
 
       <!-- Nav Right -->
       <nav class="nav-right">
-        <a href="#blog">Blog</a>
-        <a href="#">Shop</a>
-        <a href="#contact">Contact</a>
-        <a href="#">Bonus Pages</a>
+        <a href="#blog">Dress Code</a>
+        <a href="#contact">RSVP</a>
+        <a href="#">Gift Registry</a>
       </nav>
 
       <!-- Book Now Button -->
