--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
 
     :root {
-      --cream: #F4F6EA;
+      --cream: #FFFFFF;
       --cream-light: #F4F6EA;
       --charcoal: #1a1a1a;
       --charcoal-light: #4a4a4a;
